WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193295
<video> elements do not enter 'paused' state when playing to end over AirPlay
https://bugs.webkit.org/show_bug.cgi?id=193295
Summary
<video> elements do not enter 'paused' state when playing to end over AirPlay
Jer Noble
Reported
2019-01-09 13:45:05 PST
<video> elements do not enter 'paused' state when playing to end over AirPlay
Attachments
Patch
(7.68 KB, patch)
2019-01-09 13:49 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-sierra
(2.38 MB, application/zip)
2019-01-09 14:37 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews107 for mac-sierra-wk2
(3.65 MB, application/zip)
2019-01-09 14:46 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews115 for mac-sierra
(2.32 MB, application/zip)
2019-01-09 15:18 PST
,
EWS Watchlist
no flags
Details
Patch for landing
(11.65 KB, patch)
2019-01-10 14:18 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(14.65 KB, patch)
2019-01-10 17:07 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2019-01-09 13:47:42 PST
<
rdar://problem/46708670
>
Jer Noble
Comment 2
2019-01-09 13:49:43 PST
Created
attachment 358737
[details]
Patch
EWS Watchlist
Comment 3
2019-01-09 14:37:39 PST
Comment on
attachment 358737
[details]
Patch
Attachment 358737
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/10688508
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 4
2019-01-09 14:37:40 PST
Created
attachment 358739
[details]
Archive of layout-test-results from ews103 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5
2019-01-09 14:46:58 PST
Comment on
attachment 358737
[details]
Patch
Attachment 358737
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/10688517
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 6
2019-01-09 14:46:59 PST
Created
attachment 358744
[details]
Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7
2019-01-09 15:18:26 PST
Comment on
attachment 358737
[details]
Patch
Attachment 358737
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/10688681
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 8
2019-01-09 15:18:29 PST
Created
attachment 358754
[details]
Archive of layout-test-results from ews115 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-sierra Platform: Mac OS X 10.12.6
Aakash Jain
Comment 9
2019-01-09 21:51:46 PST
This patch seems to cause 31 API Tests Timeout:
https://ews-build.webkit-uat.org/#/builders/19/builds/128
Eric Carlson
Comment 10
2019-01-09 22:47:18 PST
(In reply to Aakash Jain from
comment #9
)
> This patch seems to cause 31 API Tests Timeout: > >
https://ews-build.webkit-uat.org/#/builders/19/builds/128
And it hasn't landed yet.
Aakash Jain
Comment 11
2019-01-10 04:56:51 PST
(In reply to Eric Carlson from
comment #10
)
> And it hasn't landed yet.
Yup. These results are by EWS. We have EWS for API tests coming up soon.
Jer Noble
Comment 12
2019-01-10 09:48:23 PST
(In reply to Aakash Jain from
comment #11
)
> (In reply to Eric Carlson from
comment #10
) > > And it hasn't landed yet. > Yup. These results are by EWS. We have EWS for API tests coming up soon.
Nice! (Don't worry; I'm not going to land this patch till the bots are green.)
Jer Noble
Comment 13
2019-01-10 14:18:20 PST
Created
attachment 358835
[details]
Patch for landing
Eric Carlson
Comment 14
2019-01-10 14:45:24 PST
Comment on
attachment 358835
[details]
Patch for landing View in context:
https://bugs.webkit.org/attachment.cgi?id=358835&action=review
> Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:3256 > +void MediaPlayerPrivateAVFoundationObjC::timeControlStatusDidChange(int timeControlStatus) > +{
Maybe ASSERT(m_shouldObserveTimeControlStatus) ?
Jer Noble
Comment 15
2019-01-10 14:48:54 PST
(In reply to Eric Carlson from
comment #14
)
> Comment on
attachment 358835
[details]
> Patch for landing > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=358835&action=review
> > > Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:3256 > > +void MediaPlayerPrivateAVFoundationObjC::timeControlStatusDidChange(int timeControlStatus) > > +{ > > Maybe ASSERT(m_shouldObserveTimeControlStatus) ?
Can't. Imagine you ended and immediately seeked; you'd get the KVO delivered while m_shouldObserveTimeControlStatus was set to false. You could do a 'if (!m_shouldObserve) return;' though.
Aakash Jain
Comment 16
2019-01-10 16:06:47 PST
> Comment on
attachment 358835
[details]
> Patch for landing
Seems like it causes 1 API test failure: TestWebKitAPI.WebKitLegacy.MediaPlaybackSleepAssertion
https://ews-build.webkit-uat.org/#/builders/19/builds/162
Jer Noble
Comment 17
2019-01-10 17:07:19 PST
Created
attachment 358854
[details]
Patch for landing
Aakash Jain
Comment 18
2019-01-10 18:11:27 PST
> Created
attachment 358854
[details]
> Patch for landing
API-tests-macOS passed:
https://ews-build.webkit-uat.org/#/builders/19/builds/167
WebKit Commit Bot
Comment 19
2019-01-10 20:46:33 PST
Comment on
attachment 358854
[details]
Patch for landing Clearing flags on attachment: 358854 Committed
r239857
: <
https://trac.webkit.org/changeset/239857
>
WebKit Commit Bot
Comment 20
2019-01-10 20:46:35 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug